SORRY another small fix in docs

--- a/docs/source/audio_load.mdx
+++ b/docs/source/audio_load.mdx
@@ -70,7 +70,7 @@ folder/train/second_audio_file.mp3
 folder/train/third_audio_file.mp3
 ```
 
-Your `metadata.jsonl` file must have a `"file_name"` column which links audio files with their metadata. An example `metadata.jsonl` file might look like:
+Your `metadata.jsonl` file must have a `file_name` column which links audio files with their metadata. An example `metadata.jsonl` file might look like:
 
 ```python
 {"file_name": "first_audio_file.mp3", "transcription": "znowu się duch z ciałem zrośnie w młodocianej wstaniesz wiosnie i możesz skutkiem tych leków umierać wstawać wiek wieków dalej tam były przestrogi jak siekać głowę jak nogi"}
