--- a/docs/source/image_dataset_script.mdx
+++ b/docs/source/image_dataset_script.mdx
@@ -1,4 +1,48 @@
-# Create an image dataset loading script
+# Create an image dataset
+
+There are two methods for creating and sharing an image dataset. This guide will show you how to:
+
+* Create an image dataset with `ImageFolder` and some metadata. This is a no-code solution for quickly creating an image dataset. 
+* Create an image dataset by writing a loading script. This method is a bit more involved, but you have greater flexibility over how a dataset is defined, downloaded, and generated.
+
+<Tip>
+
+You can control access to your dataset by requiring users to request access first. Users will have to share their contact information in order to access the dataset. Check out the [Gated datasets](https://huggingface.co/docs/hub/datasets-gated) guide for more information about this Hub feature.
+
+</Tip>
+
+## ImageFolder
+
+The `ImageFolder` is a dataset builder designed to quickly load an image dataset without requiring you to write any code. `ImageFolder` automatically infers the class labels of your dataset based on the directory name. Just store your dataset in a directory structure like:
+
+```
+folder/train/dog/golden_retriever.png
+folder/train/dog/german_shepherd.png
+folder/train/dog/chihuahua.png
+
+folder/train/cat/maine_coon.png
+folder/train/cat/bengal.png
+folder/train/cat/birman.png
+```
+
+Then users can load your dataset by specifying `imagefolder` in [`load_dataset`] and the directory in `data_dir`:
+
+```py
+>>> from datasets import load_dataset
+
+>>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder")
+```
+
+If there is additional information you'd like to include about your dataset, like text captions or bounding boxes, add it as a `metadata.jsonl` file in your folder. This lets you quickly create datasets for different computer vision tasks like text captioning or object detection.
+
+```
+folder/train/metadata.jsonl
+folder/train/0001.png
+folder/train/0002.png
+folder/train/0003.png
+```
+
+## Loading script
 
 Write a dataset loading script to share a dataset. It defines a dataset's splits and configurations, and handles downloading and generating a dataset. The script is located in the same folder or repository as the dataset. 
 
@@ -45,14 +89,14 @@ To help you get started, we created a loading script [template](https://github.c
 Start by creating your dataset class as a subclass of [`GeneratorBasedBuilder`] and add the three methods. Don't worry about filling in each of these methods yet, you'll develop those over the next few sections:
 
 ```py
->>> class Food101(datasets.GeneratorBasedBuilder):
-...     """Food-101 Images dataset"""
-...
-...     def _info(self):
-...
-...     def _split_generators(self, dl_manager):
-...
-...     def _generate_examples(self, images, metadata_path):
+class Food101(datasets.GeneratorBasedBuilder):
+    """Food-101 Images dataset"""
+
+    def _info(self):
+
+    def _split_generators(self, dl_manager):
+
+    def _generate_examples(self, images, metadata_path):
 ```
 
 ### Multiple configurations
@@ -62,19 +106,19 @@ In some cases, a dataset may have more than one configuration. For example, if y
 To create different configurations, use the [`BuilderConfig`] class to create a subclass for your dataset. Provide the links to download the images and labels in `data_url` and `metadata_urls`:
 
 ```py
->>> class Food101Config(datasets.BuilderConfig):
-...     """Builder Config for Food-101"""
-... 
-...     def __init__(self, data_url, metadata_urls, **kwargs):
-...         """BuilderConfig for Food-101.
-...         Args:
-...           data_url: `string`, url to download the zip file from.
-...           metadata_urls: dictionary with keys 'train' and 'validation' containing the archive metadata URLs
-...           **kwargs: keyword arguments forwarded to super.
-...         """
-...         super(Food101Config, self).__init__(version=datasets.Version("1.0.0"), **kwargs)
-...         self.data_url = data_url
-...         self.metadata_urls = metadata_urls
+class Food101Config(datasets.BuilderConfig):
+    """Builder Config for Food-101"""
+ 
+    def __init__(self, data_url, metadata_urls, **kwargs):
+        """BuilderConfig for Food-101.
+        Args:
+          data_url: `string`, url to download the zip file from.
+          metadata_urls: dictionary with keys 'train' and 'validation' containing the archive metadata URLs
+          **kwargs: keyword arguments forwarded to super.
+        """
+        super(Food101Config, self).__init__(version=datasets.Version("1.0.0"), **kwargs)
+        self.data_url = data_url
+        self.metadata_urls = metadata_urls
 ```
 
 Now you can define your subsets at the top of [`GeneratorBasedBuilder`]. Imagine you want to create two subsets in the Food-101 dataset based on whether it is a breakfast or dinner food.
@@ -83,29 +127,29 @@ Now you can define your subsets at the top of [`GeneratorBasedBuilder`]. Imagine
 2. For each configuration, provide a name, description, and where to download the images and labels from.
 
 ```py
->>> class Food101(datasets.GeneratorBasedBuilder):
-...     """Food-101 Images dataset"""
-... 
-...     BUILDER_CONFIGS = [
-...         Food101Config(
-...             name="breakfast",
-...             description="Food types commonly eaten during breakfast.",
-...             data_url="https://link-to-breakfast-foods.zip",
-...             metadata_urls={
-...                 "train": "https://link-to-breakfast-foods-train.txt", 
-...                 "validation": "https://link-to-breakfast-foods-validation.txt"
-...             },
-...         ,
-...         Food101Config(
-...             name="dinner",
-...             description="Food types commonly eaten during dinner.",
-...             data_url="https://link-to-dinner-foods.zip",
-...             metadata_urls={
-...                 "train": "https://link-to-dinner-foods-train.txt", 
-...                 "validation": "https://link-to-dinner-foods-validation.txt"
-...             },
-...         )...
-...     ]
+class Food101(datasets.GeneratorBasedBuilder):
+    """Food-101 Images dataset"""
+ 
+    BUILDER_CONFIGS = [
+        Food101Config(
+            name="breakfast",
+            description="Food types commonly eaten during breakfast.",
+            data_url="https://link-to-breakfast-foods.zip",
+            metadata_urls={
+                "train": "https://link-to-breakfast-foods-train.txt", 
+                "validation": "https://link-to-breakfast-foods-validation.txt"
+            },
+        ,
+        Food101Config(
+            name="dinner",
+            description="Food types commonly eaten during dinner.",
+            data_url="https://link-to-dinner-foods.zip",
+            metadata_urls={
+                "train": "https://link-to-dinner-foods-train.txt", 
+                "validation": "https://link-to-dinner-foods-validation.txt"
+            },
+        )...
+    ]
 ```
 
 Now if users want to load the `breakfast` configuration, they can use the configuration name:
@@ -141,21 +185,21 @@ You'll notice a lot of the dataset information is defined earlier in the loading
 </Tip>
 
 ```py
->>> def _info(self):
-...     return datasets.DatasetInfo(
-...         description=_DESCRIPTION,
-...         features=datasets.Features(
-...             {
-...                 "image": datasets.Image(),
-...                 "label": datasets.ClassLabel(names=_NAMES),
-...             }
-...         ),
-...         supervised_keys=("image", "label"),
-...         homepage=_HOMEPAGE,
-...         citation=_CITATION,
-...         license=_LICENSE,
-...         task_templates=[ImageClassification(image_column="image", label_column="label")],
-...     )
+def _info(self):
+    return datasets.DatasetInfo(
+        description=_DESCRIPTION,
+        features=datasets.Features(
+            {
+                "image": datasets.Image(),
+                "label": datasets.ClassLabel(names=_NAMES),
+            }
+        ),
+        supervised_keys=("image", "label"),
+        homepage=_HOMEPAGE,
+        citation=_CITATION,
+        license=_LICENSE,
+        task_templates=[ImageClassification(image_column="image", label_column="label")],
+    )
 ```
 
 ## Download and define the dataset splits
@@ -181,25 +225,25 @@ To stream a TAR archive file, you need to use [`DownloadManager.iter_archive`]! 
 </Tip>
 
 ```py
->>> def _split_generators(self, dl_manager):
-...     archive_path = dl_manager.download(_BASE_URL)
-...     split_metadata_paths = dl_manager.download(_METADATA_URLS)
-...     return [
-...         datasets.SplitGenerator(
-...             name=datasets.Split.TRAIN,
-...             gen_kwargs={
-...                 "images": dl_manager.iter_archive(archive_path),
-...                 "metadata_path": split_metadata_paths["train"],
-...             },
-...         ),
-...         datasets.SplitGenerator(
-...             name=datasets.Split.VALIDATION,
-...             gen_kwargs={
-...                 "images": dl_manager.iter_archive(archive_path),
-...                 "metadata_path": split_metadata_paths["test"],
-...             },
-...         ),
-...     ]
+def _split_generators(self, dl_manager):
+    archive_path = dl_manager.download(_BASE_URL)
+    split_metadata_paths = dl_manager.download(_METADATA_URLS)
+    return [
+        datasets.SplitGenerator(
+            name=datasets.Split.TRAIN,
+            gen_kwargs={
+                "images": dl_manager.iter_archive(archive_path),
+                "metadata_path": split_metadata_paths["train"],
+            },
+        ),
+        datasets.SplitGenerator(
+            name=datasets.Split.VALIDATION,
+            gen_kwargs={
+                "images": dl_manager.iter_archive(archive_path),
+                "metadata_path": split_metadata_paths["test"],
+            },
+        ),
+    ]
 ```
 
 ## Generate the dataset
@@ -215,18 +259,18 @@ To stream a TAR archive file, the `metadata_path` needs to be opened and read fi
 Now you can write a function for opening and loading examples from the dataset:
 
 ```py
->>> def _generate_examples(self, images, metadata_path):
-...     """Generate images and labels for splits."""
-...     with open(metadata_path, encoding="utf-8") as f:
-...         files_to_keep = set(f.read().split("\n"))
-...     for file_path, file_obj in images:
-...         if file_path.startswith(_IMAGES_DIR):
-...             if file_path[len(_IMAGES_DIR) : -len(".jpg")] in files_to_keep:
-...                 label = file_path.split("/")[2]
-...                 yield file_path, {
-...                     "image": {"path": file_path, "bytes": file_obj.read()},
-...                     "label": label,
-...                 }
+def _generate_examples(self, images, metadata_path):
+    """Generate images and labels for splits."""
+    with open(metadata_path, encoding="utf-8") as f:
+        files_to_keep = set(f.read().split("\n"))
+    for file_path, file_obj in images:
+        if file_path.startswith(_IMAGES_DIR):
+            if file_path[len(_IMAGES_DIR) : -len(".jpg")] in files_to_keep:
+                label = file_path.split("/")[2]
+                yield file_path, {
+                    "image": {"path": file_path, "bytes": file_obj.read()},
+                    "label": label,
+                }
 ```
 
 ## Generate the dataset metadata (optional)
