--- a/docs/source/image_dataset_script.mdx
+++ b/docs/source/image_dataset_script.mdx
@@ -7,7 +7,7 @@ There are two methods for creating and sharing an image dataset. This guide will
 
 <Tip>
 
-You can control access to your dataset by requiring users to request access first. Users will have to share their contact information in order to access the dataset. Check out the [Gated datasets](https://huggingface.co/docs/hub/datasets-gated) guide for more information about this Hub feature.
+You can control access to your dataset by requiring users to share their contact information first. Check out the [Gated datasets](https://huggingface.co/docs/hub/datasets-gated) guide for more information about how to enable this feature on the Hub.
 
 </Tip>
 
