🖍 apply albert feedback

--- a/docs/source/loading.mdx
+++ b/docs/source/loading.mdx
@@ -92,7 +92,7 @@ Make your edits to the loading script and then load it by passing its local path
 
 ```py
 >>> from datasets import load_dataset
->>> eli5 = load_dataset("/local/path/to/datasets/eli5")
+>>> eli5 = load_dataset("path/to/local/eli5")
 ```
 
 ## Local and remote files
