--- a/docs/source/filesystems.mdx
+++ b/docs/source/filesystems.mdx
@@ -143,7 +143,7 @@ Otherwize the dataset is saved as an uncompressed Arrow file.
 You can also specify the size of the Parquet shard using `max_shard_size` (default is 500MB):
 
 ```py
->>> builder.download_and_prepare(file_format="parquet", max_shard_size="1GB")
+>>> builder.download_and_prepare(output_dir, storage_options=storage_options, file_format="parquet", max_shard_size="1GB")
 ```
 
 #### Dask
