Docs for audiofolder

--- a/docs/source/audio_load.mdx
+++ b/docs/source/audio_load.mdx
@@ -78,6 +78,8 @@ Your `metadata.jsonl` file must have a `file_name` column which links audio file
 {"file_name": "third_audio_file.mp3", "transcription": "pewnie kędyś w obłędzie ubite minęły szlaki zaczekajmy dzień jaki poślemy szukać wszędzie dziś jutro pewnie będzie posłali wszędzie sługi czekali dzień i drugi gdy nic nie doczekali z płaczem chcą jechać dali"}
 ```
 
+Metadata can also be specified in CSV, in which case use `metadata.csv` as the name of the metadata file.
+
 Load your audio dataset by specifying `audiofolder` and the directory containing your data in `data_dir`:
 
 ```py
