--- a/docs/source/image_dataset_script.mdx
+++ b/docs/source/image_dataset_script.mdx
@@ -42,6 +42,56 @@ folder/train/0002.png
 folder/train/0003.png
 ```
 
+Your `metadata.jsonl` file must have a `file_name` column which links image files with their metadata:
+
+```jsonl
+{"file_name": "0001.png", "additional_feature": "This is a first value of a text feature you added to your images"}
+{"file_name": "0002.png", "additional_feature": "This is a second value of a text feature you added to your images"}
+{"file_name": "0003.png", "additional_feature": "This is a third value of a text feature you added to your images"}
+```
+
+<Tip>
+
+If metadata files are present, the inferred labels based on the directory name are dropped by default. To include those labels, set `drop_labels=False` in `load_dataset`.
+
+</Tip>
+
+### Image captioning
+
+Image captioning datasets have text describing an image. An example `metadata.jsonl` may look like:
+
+```jsonl
+{"file_name": "0001.png", "text": "This is a golden retriever playing with a ball"}
+{"file_name": "0002.png", "text": "A german shepherd"}
+{"file_name": "0003.png", "text": "One chihuahua"}
+```
+
+Load the dataset with `ImageFolder`, and it will create a `text` column for the image captions:
+
+```py
+>>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder", split="train")
+>>> dataset[0]["text"]
+"This is a golden retriever playing with a ball"
+```
+
+### Object detection
+
+Object detection datasets have bounding boxes and categories identifying objects in an image. An example `metadata.jsonl` may look like:
+
+```jsonl
+{"file_name": "0001.png", "objects": {"bbox": [[302.0, 109.0, 73.0, 52.0]], "categories": [0]}}
+{"file_name": "0002.png", "objects": {"bbox": [[810.0, 100.0, 57.0, 28.0]], "categories": [1]}}
+{"file_name": "0003.png", "objects": {"bbox": [[160.0, 31.0, 248.0, 616.0], [741.0, 68.0, 202.0, 401.0]], "categories": [2, 2]}}
+```
+
+Load the dataset with `ImageFolder`, and it will create a `objects` column with the bounding boxes and the categories:
+
+```py
+>>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder", split="train")
+>>> dataset[0]["objects"]
+{"bbox": [[302.0, 109.0, 73.0, 52.0]], "categories": [0]}
+```
+
 ## Loading script
 
 Write a dataset loading script to share a dataset. It defines a dataset's splits and configurations, and handles downloading and generating a dataset. The script is located in the same folder or repository as the dataset. 
