--- a/docs/source/loading.mdx
+++ b/docs/source/loading.mdx
@@ -211,7 +211,7 @@ Load a list of Python dictionaries with [`~Dataset.from_list`]:
 
 ```py
 >>> from datasets import Dataset
->>> my_list = [{"a": 1}, {"a": 2}]
+>>> my_list = [{"a": 1}, {"a": 2}, {"a": 3}]
 >>> dataset = Dataset.from_list(my_list)
 ```
 
