add Dataset.from_list (#4890)
* add Dataset.from_list

* add more tests, clean up

* pyarrow 6 backward compatibility

* Update docs/source/loading.mdx

Co-authored-by: Quentin Lhoest <42851186+lhoestq@users.noreply.github.com>

* Update src/datasets/table.py

Co-authored-by: Quentin Lhoest <42851186+lhoestq@users.noreply.github.com>

* use from_dict in from_list, and add tests

* fix test for pyarrow 6, add to_pylist

Co-authored-by: Sander Land <sander@chatdesk.com>
Co-authored-by: Quentin Lhoest <42851186+lhoestq@users.noreply.github.com>

--- a/docs/source/loading.mdx
+++ b/docs/source/loading.mdx
@@ -210,6 +210,16 @@ Load Python dictionaries with [`~Dataset.from_dict`]:
 >>> dataset = Dataset.from_dict(my_dict)
 ```
 
+### Python list of dictionaries
+
+Load a list of Python dictionaries with [`~Dataset.from_list`]:
+
+```py
+>>> from datasets import Dataset
+>>> my_list = [{"a": 1}, {"a": 2}, {"a": 3}]
+>>> dataset = Dataset.from_list(my_list)
+```
+
 ### Pandas DataFrame
 
 Load Pandas DataFrames with [`~Dataset.from_pandas`]:
