--- a/docs/source/audio_load.mdx
+++ b/docs/source/audio_load.mdx
@@ -57,7 +57,41 @@ If you only want to load the underlying path to the audio dataset without decodi
 
 ## AudioFolder
 
-You can also load a dataset with an `AudioFolder` dataset builder. It does not require writing a custom dataloader, making it useful for quickly loading audio data.
+You can also load a dataset with an `AudioFolder` dataset builder. It does not require writing a custom dataloader, making it useful for quickly loading audio data. For classification tasks, your audio dataset structure should look like this:
+
+```
+folder/train/electronic/01.mp3
+folder/train/punk/01.mp3
+```
+
+Load your dataset by specifying `audiofolder` and the directory of your dataset in `data_dir`:
+
+```py
+>>> from datasets import load_dataset
+
+>>> dataset = load_dataset("audiofolder", data_dir="/path/to/folder")
+>>> dataset["train"][0]
+{'audio': {'path': '/path/to/electronic/01.mp3',
+  'array': array([ 3.9714024e-07,  7.3031038e-07,  7.5640685e-07, ...,
+         -1.1963668e-01, -1.1681189e-01, -1.1244172e-01], dtype=float32),
+  'sampling_rate': 44100},
+ 'label': 0}
+
+>>> dataset["train"][-1]
+{'audio': {'path': '/path/to/punk/01.mp3',
+  'array': array([0.15237972, 0.13222949, 0.10627693, ..., 0.41940814, 0.37578005,
+         0.33717662], dtype=float32),
+  'sampling_rate': 44100},
+ 'label': 1}
+```
+
+If your directory contains multiple splits, use the `data_files` argument to load the images associated with each split:
+
+```py
+>>> from datasets import load_dataset
+
+>>> dataset = load_dataset("audiofolder", data_files={"train":["train/electronic/01.mp3", ...], "test": ["test/electronic/01.mp3", ...)
+```
 
 ## AudioFolder with metadata
 
