--- a/docs/source/audio_load.mdx
+++ b/docs/source/audio_load.mdx
@@ -90,7 +90,7 @@ If your directory contains multiple splits, use the `data_files` argument to loa
 ```py
 >>> from datasets import load_dataset
 
->>> dataset = load_dataset("audiofolder", data_files={"train":["train/electronic/01.mp3", ...], "test": ["test/electronic/01.mp3", ...)
+>>> dataset = load_dataset("audiofolder", data_files={"train":["train/electronic/01.mp3", ...], "test": ["test/electronic/01.mp3", ...]})
 ```
 
 ## AudioFolder with metadata
